GH-83 REV FIX cleaned up Sonar warnings in the framework module